--- a/portal/templates/admin.html
+++ b/portal/templates/admin.html
@@ -1,6 +1,5 @@
-{% extends "layout.html" %}
+{% extends "admin_base.html" %}
 {% block main %}
-
 <div class="reduce-font-sizes">
 
     <h3 class="tnth-headline">{{ _("Admin Tools") }}</h3>
