--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -107,7 +107,18 @@ body {
   font-size: @baseMobileFontSize;
   text-rendering: optimizeLegibility;
 }
-
+.save-loader-wrapper {
+  .load-icon {
+    margin-left:4px; 
+    margin-top:5px;
+  }
+  .success-icon {
+    color: green;
+  }
+  .error-icon {
+    color: red;
+  }
+}
 .form-control,
 input,
 select,
@@ -1792,16 +1803,38 @@ div.footer-wrapper.right-panel {
   overflow-x: hidden;
   max-width: 100%;
  }
-.core-data-procedure .profile-item-container {
-  background: none;
-  border: none;
-  padding: 0;
+
+#profileProceduresWrapper.profile-item-container {
+    border: 1px solid #dcdcdc;
 }
-.core-data-procedure #profileProcedureContainer {
-  border-top: 1px solid #e8e7e7;
-  border-bottom: 1px solid #e8e7e7;
-  padding-top: 2em;
+
+#profileProceduresWrapper[data-top-org-name='IRONMAN'] {
+    display: none;
 }
+#profileProceduresWrapper{
+  &[data-user-view = 'true'] {
+    .profile-item-edit-btn {
+      display: none;
+    }
+  }
+}
+
+.core-data-procedure {
+  .profile-item-container {
+    background: none;
+    border: 0 !important;
+    padding: 0;
+  }
+  .profile-item-edit-btn {
+    display: none;
+  }
+  #profileProcedureContainer {
+    border-top: 1px solid #e8e7e7;
+    border-bottom: 1px solid #e8e7e7;
+    padding-top: 2em;
+  }
+}
+
 #profileProcedureContainer {
   table {
     border: 0;
@@ -1857,7 +1890,13 @@ div.footer-wrapper.right-panel {
 }
 
 #mainDiv.profile {
+  .profile-item-container.editable {
+    .profile-item-edit-btn {
+      display: block;
+    }
+  }
   .profile-item-edit-btn {
+    display: none;
     position: absolute;
     top: 2.5em;
     right: 3em;
@@ -2082,6 +2121,9 @@ input.clinic {
   right: 5px !important;
 }
 #createProfileForm  {
+  .profile-item-edit-btn {
+    display: none;
+  }
   .title {
     margin-top: 5%;
   }
@@ -2165,21 +2207,6 @@ input.clinic {
 
   #tnthproc-submit {
     height: auto;
-  }
-}
-
-#profileProceduresWrapper.profile-item-container {
-    border: 1px solid #dcdcdc;
-}
-
-#profileProceduresWrapper[data-top-org-name='IRONMAN'] {
-    display: none;
-}
-#profileProceduresWrapper{
-  &[data-user-view = 'true'] {
-    .profile-item-edit-btn {
-      display: none;
-    }
   }
 }
 .create-account-container {
