--- a/portal/templates/profile/my_profile.html
+++ b/portal/templates/profile/my_profile.html
@@ -9,19 +9,19 @@
         {{profile_macro.profileDemoDetail(user, current_user)}}
         <div class="row" id="profileSessionListMainContainer">
             <div class="col-md-12 col-xs-12">
-                <div  class="profile-item-container">
-                     <h4 id="proAssessmentsLoc" class="profile-item-title index-item">{{ _("My Questionnaires") }}</h4>
+                {% call profile_macro.profileSection(editable=False) %}
+                    {% call profile_macro.titleSection(id="proAssessmentsLoc") -%}{{_("My Questionnaires")}}{%- endcall%}
                     {{profile_macro.profileSessionList(user, current_user)}}
-                </div>
+                {% endcall %}
             </div>
         </div>
         {%- if user and user.has_role(ROLE.PATIENT) %}
             <div class="row">
                 <div class="col-md-12 col-xs-12">
-                    <div class="profile-item-container">
-                        <h4 id="patientReportsLoc" class="profile-item-title index-item">{{ _("My Reports") }}</h4>
+                    {% call profile_macro.profileSection(editable=False) %}
+                        {% call profile_macro.titleSection(id="patientReportsLoc") -%}{{_("My Reports")}}{%- endcall%}
                         {{profile_macro.patientReports(user)}}
-                    </div>
+                    {% endcall %}
                 </div>
             </div>
         {%- endif %}
@@ -30,17 +30,18 @@
         {%-if user.has_role(ROLE.PATIENT) and ROLE.PATIENT in config.CONSENT_EDIT_PERMISSIBLE_ROLES-%}
             <div class="row">
                 <div class="col-md-12 col-xs-12">
-                    <div class="profile-item-container editable" data-sections="org">
-                        <h4 id="orgsLoc" class="profile-item-title index-item">{{ _("My Clinic") }}</h4>
+                    {% call profile_macro.profileSection(data_sections="org") %}
+                        {% call profile_macro.titleSection() %}{{ _("My Clinic") }}{% endcall %}
                         {{profile_macro.profileOrgsSelector(user, current_user)}}
-                    </div>
+                    {% endcall %}
                 </div>
             </div>
         {%-else-%}
              <div class="row">
                 <div class="col-md-12 col-xs-12">
                     <div class="profile-item-container {% if user and user.has_role(ROLE.ADMIN) %}editable{% endif %}" data-sections="org">
-                        <h4 id="orgsLoc" class="profile-item-title index-item">{{ _("My Clinic") }}</h4>
+                        {{profile_macro.profileEditButton()}}
+                        {% call profile_macro.titleSection() -%}{{ _("My Clinic") }}{%- endcall %}
                         {{profile_macro.profileOrg(user,None,consent_agreements, current_user)}}
                     </div>
                 </div>
@@ -48,17 +49,18 @@
         {%-endif-%}
         <div class="row">
             <div class="col-md-12 col-xs-12">
-                <div class="profile-item-container">
-                    <h4 id="consentHistoryLoc" class="profile-item-title index-item">{{_("My Agreement")}}</h4>
+                {% call profile_macro.profileSection(editable=False) -%}
+                    {% call profile_macro.titleSection(id="consentHistory") -%}{{_("My Agreement")}}{%- endcall%}
                     {{profile_macro.profileConsent(user, current_user)}}
-                </div>
+                {%- endcall %}
             </div>
         </div>
     {% else %}
         <div class="row">
             <div class="col-md-12 col-xs-12">
                 <div class="profile-item-container {% if user and user.has_role(ROLE.ADMIN) %}editable{% endif %}" data-sections="org">
-                    <h4 id="orgsLoc" class="profile-item-title index-item">{{ _("My Clinic") }}</h4>
+                    {{profile_macro.profileEditButton()}}
+                    {% call profile_macro.titleSection(id="orgsLoc") -%}{{_("My Clinic")}}{%- endcall%}
                     {{profile_macro.profileOrg(user,None,consent_agreements, current_user)}}
                 </div>
             </div>
@@ -72,10 +74,10 @@
     {% if user and user.has_role(ROLE.ADMIN) and not user.has_role(ROLE.SERVICE) %}
         <div class="row">
             <div class="col-md-12 col-xs-12">
-                <div class="profile-item-container">
-                     <h4 id="rolesLoc" class="profile-item-title index-item">{{ _("My Roles") }}</h4>
+                {% call profile_macro.profileSection() -%}
+                     {% call profile_macro.titleSection(id="rolesLoc") -%}{{_("My Roles")}}{%- endcall%}
                     {{profile_macro.profileRole(user, current_user)}}
-                </div>
+                {%- endcall %}
             </div>
         </div>
     {% endif %}
