--- a/portal/templates/profile/patient_profile.html
+++ b/portal/templates/profile/patient_profile.html
@@ -52,17 +52,18 @@
   <div class="row">
     <div class="col-md-12 col-xs-12">
       <div class="profile-item-container {% if (current_user and current_user.has_role(ROLE.STAFF) and ROLE.STAFF in config.CONSENT_EDIT_PERMISSIBLE_ROLES) or (current_user and current_user.has_role(ROLE.ADMIN)) or (user and user.has_role(ROLE.STAFF) and current_user and current_user.has_role(ROLE.STAFF_ADMIN))%}editable{% endif %}" data-sections="org">
-        <h4 id="orgsLoc" class="profile-item-title index-item">{{ _("Clinic") }}</h4>
+        {{profile_macro.profileEditButton()}}
+        {% call profile_macro.titleSection() -%}{{ _("Clinic") }}{%- endcall %}
         {{profile_macro.profileOrg(user,None,consent_agreements, current_user)}}
       </div>
     </div>
   </div>
   <div class="row">
     <div class="col-md-12 col-xs-12">
-      <div class="profile-item-container">
-        <h4 id="consentHistoryLoc" class="profile-item-title index-item">{% if config.CONSENT_WITH_TOP_LEVEL_ORG %}{{_("Agreement to Share Clinical Information")}} {%else%}{{ _("Consent History") }} {%endif%}</h4>
+      {% call profile_macro.profileSection(editable=False) -%}
+        {% call profile_macro.titleSection(id="consentHistoryLoc") -%}{% if config.CONSENT_WITH_TOP_LEVEL_ORG %}{{_("Agreement to Share Clinical Information")}} {%else%}{{ _("Consent History") }} {%endif%}{%-endcall %}
         {{profile_macro.profileConsent(user, current_user)}}
-      </div>
+      {%- endcall %}
     </div>
   </div>
   {%- if current_user and current_user.has_role(ROLE.INTERVENTION_STAFF) %}
@@ -70,50 +71,44 @@
   {%- endif %}
   <div class="row" id="profileSessionListMainContainer">
       <div class="col-md-12 col-xs-12">
-        <div class="profile-item-container">
-             <h4 id="proAssessmentsLoc" class="profile-item-title index-item">{{ _("PRO Questionnaires") }}</h4>
-            {{profile_macro.profileSessionList(user, current_user)}}
-        </div>
+        {% call profile_macro.profileSection(editable=False) -%}
+          {% call profile_macro.titleSection(id="proAssessmentsLoc") -%}{{_("PRO Questionnaires")}}{%-endcall %}
+          {{profile_macro.profileSessionList(user, current_user)}}
+        {%-endcall %}
       </div>
   </div>
-
   {{profile_macro.profileClinicalQuestions(user, current_user) | show_macro('clinical_questions')}}
-
   {{profile_macro.profileProcedures(user, current_user) | show_macro('procedures')}}
-
   {{profile_macro.profileInterventionReports(user) | show_macro('intervention_reports')}}
-
   <div class="row">
     <div class="col-md-12 col-xs-12">
-      <div class="profile-item-container">
-        <h4 id="patientReportsLoc" class="profile-item-title index-item">{{ _("Patient Reports") }}</h4>
+      {% call profile_macro.profileSection(editable=False) -%}
+        {% call profile_macro.titleSection(id="patientReportsLoc") -%}{{ _("Patient Reports") }}{%-endcall %}
         {{profile_macro.patientReports(user)}}
-      </div>
+      {%- endcall %}
     </div>
   </div>
   {{profile_macro.profileDeceased(user, current_user)}}
   <div class="row">
-    <div class="col-md-12 col-xs-12">
-     {{profile_macro.profileLocaleTimeZone(user)}}
-    </div>
+    <div class="col-md-12 col-xs-12">{{profile_macro.profileLocaleTimeZone(user)}}</div>
   </div>
   {%- if (user and current_user) and current_user.has_role(ROLE.ADMIN) and not user.has_role(ROLE.SERVICE) %}
     <div class="row">
         <div class="col-md-12 col-xs-12">
-            <div class="profile-item-container">
-                 <h4 id="rolesLoc" class="profile-item-title index-item">{{ _("User Roles") }}</h4>
+            {% call profile_macro.profileSection(editable=False) -%}
+                 {% call profile_macro.titleSection(id="rolesLoc") -%}{{ _("User Roles") }}{%- endcall %}
                  {{profile_macro.profileRole(user, current_user)}}
-            </div>
+            {%- endcall %}
         </div>
     </div>
   {%- endif %}
   {%- if (user and current_user) and (current_user.has_role(ROLE.ADMIN) or current_user.has_role(ROLE.STAFF) or current_user.has_role(ROLE.INTERVENTION_STAFF)) %}
       <div class="row">
           <div class="col-md-12 col-xs-12">
-              <div class="profile-item-container">
-                  <h4 id="auditLogLoc" class="profile-item-title index-item">{{ _("Audit Log") }}</h4>
+              {% call profile_macro.profileSection(editable=False) -%}
+                  {% call profile_macro.titleSection(id="auditLogLoc") -%}{{ _("Audit Log") }}{%-endcall%}
                   {{profile_macro.profileAuditLog(user, current_user)}}
-              </div>
+              {%- endcall %}
           </div>
       </div>
   {%- endif %}
