codacy fixes, and followup fixes

--- a/portal/templates/profile/patient_profile_create.html
+++ b/portal/templates/profile/patient_profile_create.html
@@ -37,7 +37,8 @@
     {'i18next': i18next,
     'tnthAjax': tnthAjax,
     'OrgTool': new OrgTool(),
-    'leafOrgs': leafOrgs
+    'leafOrgs': leafOrgs,
+    'SYSTEM_IDENTIFIER_ENUM': SYSTEM_IDENTIFIER_ENUM
     });
     $(function() {
         /*** need to run this instead of the one function from main.js because we don't want to pre-check any org here ***/
