--- a/portal/templates/profile/staff_profile_create.html
+++ b/portal/templates/profile/staff_profile_create.html
@@ -36,7 +36,8 @@
     {'i18next': i18next,
     'tnthAjax': tnthAjax,
     'OrgTool': new OrgTool(),
-    'orgList': orgList
+    'orgList': orgList,
+    SYSTEM_IDENTIFIER_ENUM: SYSTEM_IDENTIFIER_ENUM
     });
     $(function () {
         /*** need to run this instead of the one function from main.js because we don't want to pre-check any org here ***/
