--- a/portal/templates/sessionReport.html
+++ b/portal/templates/sessionReport.html
@@ -18,7 +18,7 @@
 					<a href="{{url_for('portal.profile', user_id=user.id)}}" data-toggle="tooltip" data-placement="top" title="{{ _('Back to User Profile') }}" class="btn"><span class="glyphicon glyphicon-user" aria-hidden="true"></span></a>
 				{% endif %}
 			{% endif %}
-			&nbsp;&nbsp;<a href="{{PORTAL}}/home" data-toggle="tooltip" data-placement="top" title="{{ _('Back to Truenth Home') }}" class="btn"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></a>
+			&nbsp;&nbsp;<a href="/" data-toggle="tooltip" data-placement="top" title="{{ _('Back to Truenth Home') }}" class="btn"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></a>
 		</span>
 
 	</div>
