add fix for account creation types and css fixes

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -2217,7 +2217,7 @@ input.clinic {
   background-color: @wellColor;
   overflow: hidden;
 }
-#createProfileForm[data-account='patient'] #bdGroup {
+#accountCreationContentContainer[data-account='patient'] #bdGroup {
   min-height: 114px;
 }
 #emailInfoText {
