--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -2085,10 +2085,10 @@ div.noOrg-container {
   background-image: -webkit-linear-gradient(to top, #e8e8e8 0%, #f5f5f5 100%);
   background-image: linear-gradient(to top, #e8e8e8 0%, #f5f5f5 100%);
 }
-#createProfileForm[data-account='patient'] #bdGroup {
+#accountCreationContentContainer[data-account='patient'] #bdGroup {
   min-height: 104px;
 }
-#createProfileForm[data-account='staff'] {
+#accountCreationContentContainer[data-account='staff'] {
   #userOrgs {
    margin-top: 0;
   }
