--- a/portal/templates/profile/patient_profile_create.html
+++ b/portal/templates/profile/patient_profile_create.html
@@ -1,5 +1,6 @@
 {% extends "profile/profile_create_base.html" %}
     {% block content %}
+    <div id="accountCreationContentContainer" data-account="patient">
         <div class="row">
             <div class="col-md-11 col-xs-12">
                 {{profileName(False)}}
@@ -27,6 +28,7 @@
             <div id="fillOrgs"></div>
             <div class="help-block with-errors get-orgs-error error-message"></div>
         </div>
+    </div>
     {% endblock %}
 {% block additional_scripts %}{{super()}}{% endblock %}
 {% block document_ready %}
