--- a/portal/templates/profile/staff_profile_create.html
+++ b/portal/templates/profile/staff_profile_create.html
@@ -1,27 +1,29 @@
 {% extends "profile/profile_create_base.html" %}
 {% block title %}{{_("New Staff")}}{% endblock %}
 {% block content %}
-    <div class="row">
-        <div class="col-md-11 col-xs-12">
-            {{profileName(False)}}
-            <br/>
-            {{profileBirthDate(False)}}
-            <br/>
+    <div id="accountCreationContentContainer" data-account="staff">
+        <div class="row">
+            <div class="col-md-11 col-xs-12">
+                {{profileName(False)}}
+                <br/>
+                {{profileBirthDate(False)}}
+                <br/>
+            </div>
         </div>
-    </div>
-    <div class="form-group float-input-label profile-section" id="emailGroup">
-        <label for="email">{{ _("Email Address") }}</label>
-        <input type="text" class="form-control" id="email" name="email" autocomplete="off" data-error-field="erroremail" placeholder="{{ _('Email Address') }}" value="" data-customemail="true" required />
-        <div class="help-block with-errors" id="erroremail"></div>
-    </div>
-    {{profilePhone(False)}}
-    {{profileAltPhone(False)}}
-    <div class="divider"></div>
-    <hr/>
-    <div class="form-group profile-section" id="userOrgs">
-        <label>{{ _("Clinics") }}</label>
-        <div id="fillOrgs"></div>
-        <div class="help-block with-errors get-orgs-error error-message"></div>
+        <div class="form-group float-input-label profile-section" id="emailGroup">
+            <label for="email">{{ _("Email Address") }}</label>
+            <input type="text" class="form-control" id="email" name="email" autocomplete="off" data-error-field="erroremail" placeholder="{{ _('Email Address') }}" value="" data-customemail="true" required />
+            <div class="help-block with-errors" id="erroremail"></div>
+        </div>
+        {{profilePhone(False)}}
+        {{profileAltPhone(False)}}
+        <div class="divider"></div>
+        <hr/>
+        <div class="form-group profile-section" id="userOrgs">
+            <label>{{ _("Clinics") }}</label>
+            <div id="fillOrgs"></div>
+            <div class="help-block with-errors get-orgs-error error-message"></div>
+        </div>
     </div>
 {% endblock %}
 {% block back_button %}
