remove unintended file, add neglected fixes based on comments, codacy fixes

--- a/portal/eproms/templates/eproms/base.html
+++ b/portal/eproms/templates/eproms/base.html
@@ -104,7 +104,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
 {% else %}
     <!-- production version, optimized for size and speed -->
-    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.16/vue.min.js"></script>
 {% endif %}
 <script src="{{ url_for('static', filename='js/i18next-config.js') }}"></script>
 <script src="{{ url_for('static', filename='js/utility.js') }}"></script>
