--- a/portal/templates/layout.html
+++ b/portal/templates/layout.html
@@ -100,10 +100,11 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.1/bootstrap-table.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.9.0/validator.min.js"></script>
 {% if config["SYSTEM_TYPE"].lower() != "production" %}
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
+    <!-- development version, includes helpful console warnings -->
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script> <!-- cannot find CDN development version for this -->
 {% else %}
     <!-- production version, optimized for size and speed -->
-    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.16/vue.min.js"></script>
 {% endif %}
 <script src="{{ url_for('static', filename='js/i18next-config.js') }}"></script>
 <script src="{{ url_for('static', filename='js/utility.js') }}"></script>
