--- a/portal/templates/initial_queries_macros.html
+++ b/portal/templates/initial_queries_macros.html
@@ -285,7 +285,7 @@
   {%- endmacro %}
   {% macro patientQGroup(user) -%}
     <div id="patientQ">
-        <div id="patBiopsy" data-topic="biopsy" class="pat-q" data-profile-section-id="biopsy">
+        <div id="patBiopsy" data-topic="biopsy" class="pat-q">
           <br />
           <p class="pat-label">{{ _("Have you had a prostate cancer biopsy?") }}</p>
           <div class="form-group">
