Add translation tags to Register button

--- a/portal/templates/flask_user/login_or_register.html
+++ b/portal/templates/flask_user/login_or_register.html
@@ -49,7 +49,7 @@
                 #}
                 {% endif %}
 
-                {{ render_submit_field(form.submit, "Register", tabindex=280) }}
+                {{ render_submit_field(form.submit, _("Register"), tabindex=280) }}
             </form>
 
         </div>
