--- a/portal/templates/flask_user/register.html
+++ b/portal/templates/flask_user/register.html
@@ -32,7 +32,7 @@
                 {% endif %}
                 <br/>
 
-                {{ render_submit_field(form.submit, "Register", tabindex=280) }}
+                {{ render_submit_field(form.submit, _("Register"), tabindex=280) }}
 
                 <br/><br/><br/>
                 <div class="divider"></div>
