--- a/portal/templates/flask_user/emails/eproms_forgot_password_message.html
+++ b/portal/templates/flask_user/emails/eproms_forgot_password_message.html
@@ -1,12 +1,12 @@
 {% extends 'flask_user/emails/eproms_base_message.html' %}
 
 {% block message %}
-
+{% trans %}
 <p>We have received your password reset request.</p>
 
 <p>If you initiated this request, reset the password with the link below:<br/>
 &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{ reset_password_link }}">Reset password</a>.</p>
 
 <p>If you did not initiate this password reset, you may safely ignore this email.</p>
-
+{% endtrans %}
 {% endblock %}
