--- a/portal/templates/flask_user/emails/eproms_password_changed_message.html
+++ b/portal/templates/flask_user/emails/eproms_password_changed_message.html
@@ -1,21 +1,27 @@
 {% extends 'flask_user/emails/eproms_base_message.html' %}
 
 {% block message %}
-<p>Your password has been changed.</p>
+{% trans %}<p>Your password has been changed.</p>{% endtrans %}
 {% if user_manager.enable_forgot_password %}
 
 	{% if user.organizations.count() == 1 %}
-		<p>If you did not initiate this password change, <a href="{{ url_for('user.forgot_password', _external=True) }}">please click here to reset it</a>, or contact your representative at {{ user.organizations.first().name }}.</p>
+		{% trans forgot_password_url=url_for('user.forgot_password', _external=True), organization_name=user.organizations.first().name %}
+		<p>If you did not initiate this password change, <a href="{{ forgot_password_url }}">please click here to reset it</a>, or contact your representative at {{ organization_name }}.</p>
+        {% endtrans %}
 	{% else %}
-		<p>If you did not initiate this password change, <a href="{{ url_for('user.forgot_password', _external=True) }}">please click here to reset it</a>, or contact your representative at {{ app_name }}.</p>
+		{% trans forgot_password_url=url_for('user.forgot_password', _external=True) %}
+		<p>If you did not initiate this password change, <a href="{{ forgot_password_url }}">please click here to reset it</a>, or contact your representative at {{ app_name }}.</p>
+        {% endtrans %}
 	{% endif %}
 
 {% else %}
 
 	{% if user.organizations.count() == 1 %}
-		<p>If you did not initiate this password change, please contact your representative at {{ user.organizations.first().name }}.</p>
+		{% trans organization_name=user.organizations.first().name %}
+		<p>If you did not initiate this password change, please contact your representative at {{ organization_name }}.</p>
+		{% endtrans %}
 	{% else %}
-		<p>If you did not initiate this password change, please contact your representative at {{ app_name }}.</p>
+		<p>{% trans %}If you did not initiate this password change, please contact your representative at {{ app_name }}.{% endtrans %}</p>
 	{% endif %}
 
 {% endif %}
