Move HTML out of translation tags

--- a/portal/templates/flask_user/emails/eproms_base_message.html
+++ b/portal/templates/flask_user/emails/eproms_base_message.html
@@ -1,4 +1,4 @@
-{% trans first_name=user.first_name, last_name=user.last_name %}<p>Hello {{ first_name }} {{ last_name }},</p>{% endtrans %}
+<p>{% trans first_name=user.first_name, last_name=user.last_name %}Hello {{ first_name }} {{ last_name }},{% endtrans %}</p>
 
 {% block message %}
 {% endblock %}
