--- a/portal/templates/flask_user/emails/eproms_password_changed_message.html
+++ b/portal/templates/flask_user/emails/eproms_password_changed_message.html
@@ -5,21 +5,15 @@
 {% if user_manager.enable_forgot_password %}
 
 	{% if user.organizations.count() == 1 %}
-		{% trans forgot_password_url=url_for('user.forgot_password', _external=True), organization_name=user.organizations.first().name %}
-		<p>If you did not initiate this password change, <a href="{{ forgot_password_url }}">please click here to reset it</a>, or contact your representative at {{ organization_name }}.</p>
-        {% endtrans %}
+		<p>{% trans forgot_password_url=url_for('user.forgot_password', _external=True), organization_name=user.organizations.first().name %}If you did not initiate this password change, <a href="{{ forgot_password_url }}">please click here to reset it</a>, or contact your representative at {{ organization_name }}.{% endtrans %}</p>
 	{% else %}
-		{% trans forgot_password_url=url_for('user.forgot_password', _external=True) %}
-		<p>If you did not initiate this password change, <a href="{{ forgot_password_url }}">please click here to reset it</a>, or contact your representative at {{ app_name }}.</p>
-        {% endtrans %}
+		<p>{% trans forgot_password_url=url_for('user.forgot_password', _external=True) %}If you did not initiate this password change, <a href="{{ forgot_password_url }}">please click here to reset it</a>, or contact your representative at {{ app_name }}.{% endtrans %}</p>
 	{% endif %}
 
 {% else %}
 
 	{% if user.organizations.count() == 1 %}
-		{% trans organization_name=user.organizations.first().name %}
-		<p>If you did not initiate this password change, please contact your representative at {{ organization_name }}.</p>
-		{% endtrans %}
+		<p>{% trans organization_name=user.organizations.first().name %}If you did not initiate this password change, please contact your representative at {{ organization_name }}.{% endtrans %}</p>
 	{% else %}
 		<p>{% trans %}If you did not initiate this password change, please contact your representative at {{ app_name }}.{% endtrans %}</p>
 	{% endif %}
